# accord

./: Cargo.toml  README.md
crates/bridge/: Cargo.toml
crates/bridge/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
src/: lib.rs
