[package]
name = "accord"
version = "0.1.0"
edition = "2024"

[dependencies]
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs.git", tag = "v0.12.0" }
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", tag = "v0.12.0" }
libc = "0.2.180"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
telemetry = { path = "crates/telemetry", package = "telemetry" }
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[lib]
crate-type = ["cdylib"]
