[workspace]
members = ["crates/telemetry", "crates/bridge", "crates/gui"]

[package]
name = "accord"
version = "0.1.0"
edition = "2024"

[dependencies]
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs.git", tag = "v0.12.0" }
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", tag = "v0.12.0" }
mio = { version = "1.1.1", features = ["net", "os-poll"] }
telemetry = { path = "crates/telemetry", package = "telemetry" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[lib]
crate-type = ["cdylib"]
